# prepnexa-backend

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 18873ea0ba63_add_flashcards_table.py  bc5839ef77a5_initial_schema.py
app/: main.py
app/core/: aws.py  celery_app.py  config.py  database.py  init_db.py  ocr.py  s3.py  security.py  test_ocr.py
app/crud/: user.py
app/dependencies/: auth.py  services.py
app/models/: __init__.py  exam.py  file.py  flashcards.py  predicted_paper.py  processed_text.py  question.py  question_topic.py  upload.py  user.py
app/prompts/: flashcard_prompt.py  question_paper_prompt.py
app/repositories/: flashcard_repo.py  predicted_paper_repo.py  processed_text_repo.py  question_repo.py  topic_repo.py  upload_repo.py  user_repo.py
app/routers/: papers.py  uploads.py  users.py
app/schemas/: user.py
app/services/: flashcard_service.py  llm_client.py  ocr_service.py  paper_prediction_service.py  pdf_generator.py  predict_question_paper.py  prediction_service.py  question_extractor.py  text_processing.py  upload_service.py  user_service.py  worker_service.py
app/workers/: dispatcher.py  process_upload.py  tasks.py
dev/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
scripts/: compose.sh  deploy.sh  logs.sh
tests/: conftest.py  test_users.py
